--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,14 +6,13 @@ name: Node.js CI
 on:
   push:
     branches: [ master ]
-  pull_request_target:
-    types: [labeled]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    if: contains(github.event.pull_request.labels.*.name, 'safe to test')
 
     strategy:
       matrix:
